# mega-get-server

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEBUG-FRONTEND.md  Dockerfile  Dockerfile.hardened  INFRASTRUCTURE.md  README.md  SECURITY.md  coverage-out.txt  coverage-out2.txt  docker-vpn-launch.md  login-dhi.sh  pyproject.toml  repro_publish.yml  start-dev.bat  start-dev.mjs  start-dev.ps1  start-dev.sh  test_file
.Jules/: palette.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  docker-build.yml  publish.yml  quality.yml  security.yml  sync-version.yml  test.yml
.jules/: bolt.md  sentinel.md
DESIGN/: FtIcon.tsx  ft-tailwind.config.js  ft-tokens.css
DESIGN/docs/: BRAND.md  README.md  chaos-engineer-checklist.md  code-reviewer-checklist.md  docker-expert-checklist.md  performance-engineer-checklist.md  qa-expert-checklist.md  security-auditor-checklist.md  ui-ux-tester-checklist.md
DESIGN/react/: FtIconAnimated.tsx
DESIGN/tokens/: ft-tailwind.config.js  ft-tokens.css  manifest.webmanifest
api/: README.md  api_main.py  crypt_utils.py  decrypt_env.py  ft_setup.py  http_downloads.py  mega_service.py  pending_correlation.py  pending_queue.py  requirements.txt  security.py  tool_diagnostics.py  transfer_metadata.json  transfer_metadata.py  ui_settings.json  ui_settings.py
api/routers/: diagnostics_router.py  terminal_router.py
api/services/: __init__.py  json_store.py  webhook_service.py
api/tests/: conftest.py  test_analytics_capture.py  test_analytics_simulated_e2e.py  test_api_adversarial.py  test_api_daily_buckets.py  test_api_diag_tools.py  test_api_endpoints_more.py  test_api_execute_dispatched.py  test_api_hardening_validation.py  test_api_mutations.py  test_api_transfer_by_tag.py  test_api_transfer_http_endpoints.py  (+49 more)
archive/: DEBUG-FRONTEND.md
docs/: ACCESSIBILITY.md  COMPAT-LAYOUT.md  FRONTEND-DESIGN-PHILOSOPHY.md  HARDENED-IMAGE.md  LOAD-TESTING.md  QUALITY-BASELINE.md  UI-DESIGN.md  dev-tools.md
files/: entrypoint.sh
flet-app/: README.md  main.py  mega_service.py  requirements.txt  tool_diagnostics.py  transfer_metadata.py  ui_settings.py
react/: package-lock.json  package.json
react-new/: README.md  metadata.json
scripts/: ci_tier_detector.py  smoke-docker-build.sh  sync_version.py
web/: .env.example  README.md  index.html  lighthouserc.cjs  metadata.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  server.ts  tsconfig.json  tsconfig.strict.json  vite.config.ts
(+86 files in other folders)
