[project]
name = "linktugger"
version = "0.5.0"
description = "FastAPI backend for FileTugger with MEGAcmd integration"
authors = [{ name = "Maintainers" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["api/requirements.txt"] }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["archive/"]

[tool.bandit]
exclude_dirs = ["api/tests", "archive"]
skips = ["B101"] # allow assert in tests (though tests are excluded)
